# L30_HomeWork

./: .gitignore  README.md
orchestrator/: PRD.md  README.md  __init__.py  config.yaml  main.py  requirements.txt
orchestrator/email_coordinator/: PRD.md  README.md  __init__.py  __main__.py  config.yaml  coordinator.py
orchestrator/processing_coordinator/: PRD.md  README.md  __init__.py  __main__.py  config.yaml  coordinator.py
orchestrator/processing_coordinator/grade_manager/: .gitignore  PRD.md  README.md  SETUP.md  TEST_RESULTS.md  __init__.py  __main__.py  config.yaml  pyproject.toml  service.py
orchestrator/processing_coordinator/grade_manager/github_cloner/: .gitignore  PRD.md  README.md  __init__.py  __main__.py  config.yaml  requirements.txt  service.py
orchestrator/processing_coordinator/grade_manager/github_cloner/tests/: __init__.py  test_service.py
orchestrator/processing_coordinator/grade_manager/python_analyzer/: .gitignore  PRD.md  README.md  config.yaml
orchestrator/processing_coordinator/grade_manager/python_analyzer/src/: __init__.py  __main__.py  file_analyzer.py  grading_calculator.py  line_counter.py  service.py
orchestrator/processing_coordinator/grade_manager/python_analyzer/tests/: __init__.py  test_file_analyzer.py  test_grading_calculator.py  test_line_counter.py  test_service.py
orchestrator/processing_coordinator/grade_manager/tests/: __init__.py  test_service.py
orchestrator/tests/: __init__.py  test_orchestrator.py
shared/: PRD.md  README.md  __init__.py  config.yaml  requirements.txt
shared/config/: __init__.py  base_config.py  env_loader.py
shared/models/: __init__.py  (+4 more)
(+117 files in other folders)
